--- a/src/Navbar/Navbar.css
+++ b/src/Navbar/Navbar.css
@@ -8,7 +8,8 @@ nav
     position:fixed;
     top: 0;
     left: 0;
-    z-index: 1; 
+    z-index: 1;
+    transition:all .5s ease;
 }
 .links-container
 {
