--- a/src/Copyright/copyright.css
+++ b/src/Copyright/copyright.css
@@ -17,6 +17,7 @@
       justify-content: space-around;
       align-items: center;
       gap: 3rem;
+      cursor: pointer;
 }
 
 /* media queries */
