navbar state changed to usestate

--- a/src/Navbar/Navbar.css
+++ b/src/Navbar/Navbar.css
@@ -9,10 +9,6 @@ nav
     top: 0;
     left: 0;
     z-index: 1;
-<<<<<<< HEAD
-=======
-    transition:all .5s ease;
->>>>>>> 5d605b0da09b9d2a557ddb4b931ba614466dce4d
 }
 .links-container
 {
@@ -61,6 +57,9 @@ nav
 .menu-icon-div img
 {
       width: 100%;
+}
+.coloredNavbar{
+      background-color: #212ea0;
 }
 /* media queries */
 
